# beacon

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: chat.rs  keychain.rs  mod.rs  project.rs
src/components/: BeaconLogo.tsx  TopBar.tsx
src/lib/: tauri.ts
src/pages/: Chat.tsx  Home.tsx  Settings.tsx
src/store/: useAppStore.ts
